--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ a {
       text-align: left;
     }
   }
+#experience
 /* Additional styles for the experience table */
 .experience-table {
     width: 100%;
